# ObsidianMate

./: .env.example  AUTHORS.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py  writeup.md
assets/db/: obsidian_mate.db
config/: config.yaml
docker/: .env.example  docker-compose.yml
obsidian_mate/: agent.py  get_summarize_append.evalset.json
scripts/: create_env.sh  run_app.sh
src/controllers/: __init__.py  base_controller.py  nlp_controller.py  session_controller.py
src/core/agents/: __init__.py  chat_agent.py  extract_conversation_agent.py  filter_agent.py  markdown_agent.py  root_agent.py  summary_agent.py
src/core/obsidian_mate/: __init__.py  agent.py
src/core/obsidian_mate/sub_agents/: __init__.py  chat_agent.py  excalidraw_interaction_agent.py  extract_conversation_agent.py  filter_agent.py  markdown_agent.py  obsidian_interaction_agent.py  smart_notes_agent.py  summary_agent.py  transcript_agent.py
src/core/tools/: __init__.py  conversation_extraction_tool.py  excalidraw_interaction_tool.py  google_search_tool.py  obsidian_interaction_tool.py  smart_notes_tool.py  youtube_transcript_tool.py
src/models/enums/: __init__.py  agent_name_enums.py
src/routes/: base.py  data.py  nlp.py
src/stores/llm/templates/: __init__.py  template_parser.py
src/stores/llm/templates/locales/ar/: chat.py  clean.py  cleaner.py  extract_conversation.py  markdown.py
src/stores/llm/templates/locales/en/: chat.py  clean.py  cleaner.py  extract_conversation.py  filter.py  get_transcript.py  interact_excalidraw.py  interact_obsidian.py  manage_conversation.py  markdown.py  root.py  summarize.py  take_notes.py
src/utils/: __init__.py  agent_utils.py  config_utils.py  logging_utils.py  stream_utils.py
