[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ObsidianMate"
version = "1.0.0"
description = "An AI-powered assistant for Obsidian users, leveraging LLMs to enhance note-taking and productivity."
authors = [
    { name="Adham Allam", email="adham32003200@gmail.com" },
    { name="Mohammad Fawzy", email="moha.fawzy63@gmail.com"},
    { name="Taha Ahmad", email="dkfid@gmail.com" },
    { name="Abdelrahman Salama", email="dkfid@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICEN[CS]E*", "AUTHORS.md"]
keywords = ["Obsidian", "Assistant", "ChatBot", "AI", "LLM"]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Setup Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.urls]
Repository = "https://github.com/Fawzy-AI-Explorer/ObsidianMate"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
# Example: mycli = "my_package.cli:main"
